<resources>
    <string name="app_name">Via</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ana_sayfa">Ana Sayfa</string>
    <string name="g_nderi_ekle">Gönderi Ekle</string>
    <string name="profil">Profil</string>
    <string name="kay_t_ol">Kayıt Ol</string>
    <string name="giri_yap">Giriş Yap</string>
    <string name="email">Email</string>
    <string name="password">Şifre</string>
    <string name="resim_se">Resim seç</string>
    <string name="yorum_giriniz">Yorum giriniz...</string>
    <string name="upload_post">Yükle</string>
    <string name="exit_button">Çıkış yap</string>
    <string name="delete_post">Sil</string>
    <string name="default_like_value">0</string>
    <string name="post_option">post option</string>
    <string name="user_post">User post</string>
    <string name="delete_user_post">Gönderiyi Sil</string>
    <string name="comment">Yorum giriniz</string>
</resources>